--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,20 +1,41 @@
 .App {
   text-align: center;
-  padding: 30px;
 }
-
 
 .App-header {
   background-color: #282c34;
-  min-height: 40vh;
+  min-height: 15vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.Collapsible {
+  width: 200px;
+  margin: auto;
+}
+
+.Collapsible__trigger {
+  display: block;
+  position: relative;
+  border: 1px solid white;
+  padding: 10px;
+  background: rgb(97, 94, 95);
+  color: white; 
+}
+
+.BoatForm-submit {
+  border: 1px solid white;
+  background: #d81657;
+  color: white;
+  padding: 8px;
+  margin-top: 10px;
+}
+
+.BoatBoard {
+  margin-top: 20px;
 }
