--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,6 +14,12 @@
   margin-bottom: 20px;
 }
 
+.App-subtitle {
+  color: #61dafb;
+  font-style: italic;
+}
+
 .BoatBoard {
-  margin-top: 20px;
+  margin: auto;
+  width: 90%;
 }
